--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -10,11 +10,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
-    border-radius: 5px;
+    padding: 5px;
+    border-radius: 10px;
     margin: 20px;
-    border-top: 1px solid gray;
-    background-color: #474b53;
+    background-color: #42454d;
 }
 .chat__input form input{
     padding: 15px;
@@ -25,6 +24,10 @@
     font-size: large;
     width: 100%;
 }
+.chat__input .MuiSvgIcon-root{
+    margin-left: 14px;
+    margin-right: 4px;
+}
 .chat__input form{
     flex: 1;
 }
@@ -32,7 +35,7 @@
     display: none;
 }
 .chat__inputIcons .MuiSvgIcon-root{
-    padding: 5px;
+    padding-right: 5px;
 }
 .chat__messages{
     flex: 1;
