--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -35,40 +35,61 @@
     display: flex;
     align-items: center;
 }
-.sidebar__voice, 
+.sidebar__voice{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgb(179, 179, 179);
+    background-color: #2a2b2e;
+    padding: 10px;
+    border-top: 1px solid gray;
+}
 .sidebar__profile{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: gray;
-    background-color: #2f3135;
+    color: rgb(179, 179, 179);
+    background-color: #2a2b2e;
     padding: 10px;
     border-top: 1px solid gray;
 }
 .sidebar__voiceInfo{
     flex: 1;
-    padding: 10px;
+    padding: 6px;
 }
 .sidebar__voiceIcon{
-    color: #4fb185;
+    color: #4be09d;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .sidebar__voiceInfo h3{
-    color: #4fb185;
+    color: #4be09d;
+    font-weight: 600;
+    font-size: medium;
 }
 .sidebar__voiceInfo p{
+    color: rgb(196, 196, 196);
     font-size: smaller;
 }
 .sidebar__voiceIcons .MuiSvgIcon-root{
-    padding: 10px;
+    padding: 7px;
 }
 .sidebar__profileInfo{
     flex: 1;
-    padding: 10px;
+    padding: 6px;
 }
 .sidebar__profileInfo h3{
+    font-size: medium;
+    font-weight: 600;
     color: white;
+    padding-left: 4px;
+}
+.sidebar__profileInfo p{
+    font-size: small;
+    padding-left: 4px;
+    color: rgb(196, 196, 196);
 }
 .sidebar__profileIcons .MuiSvgIcon-root{
-    padding: 10px;
+    padding: 7px;
 }
 
