--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -27,6 +27,10 @@
 .chat__input .MuiSvgIcon-root{
     margin-left: 14px;
     margin-right: 4px;
+    cursor: pointer;
+}
+.chat__input .MuiSvgIcon-root:hover{
+    color: white;
 }
 .chat__input form{
     flex: 1;
@@ -36,6 +40,10 @@
 }
 .chat__inputIcons .MuiSvgIcon-root{
     padding-right: 5px;
+    cursor: pointer;
+}
+.chat__inputIcons .MuiSvgIcon-root:hover{
+    color: white;
 }
 .chat__messages{
     flex: 1;
