--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -9,7 +9,23 @@
     width: 300px;
     background-color: #738adb;
     color: #eff2f5;
-    font-weight: 800;
+    font-weight: 500;
+    font-family: "whitney";
+}
+.login button:hover{
+    background-color: #6174b9;
+}
+.login h3{
+    color: #738adb;
+    font-family: "whitney medium";
+    font-weight: 500;
+}
+.login h2{
+    color: #738adb;
+    font-family: "whitney";
+    font-weight: 700;
+    letter-spacing: 4px;
+    font-size: 2rem;
 }
 .login div img{
     object-fit: contain;
