--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -17,6 +17,7 @@
 }
 .sidebar__top h3{
     font-weight: 500;
+    font-family: "whitney medium";
 }
 .sidebar__channels{
     flex: 1;
@@ -39,6 +40,12 @@
     display: flex;
     align-items: center;
 }
+.sidebar__header h4{
+    font-weight: 500;
+    font-size: small;
+    color: rgb(165, 165, 165);
+    font-family: "whitney medium";
+}
 .sidebar__voice{
     display: flex;
     justify-content: space-between;
@@ -46,7 +53,7 @@
     color: rgb(179, 179, 179);
     background-color: #2a2b2e;
     padding: 10px;
-    border-top: 1px solid gray;
+    border-top: 1px solid rgba(128, 128, 128, 0.425);
 }
 .sidebar__profile{
     display: flex;
@@ -55,7 +62,7 @@
     color: rgb(179, 179, 179);
     background-color: #2a2b2e;
     padding: 10px;
-    border-top: 1px solid gray;
+    border-top: 1px solid rgba(128, 128, 128, 0.425);
 }
 .sidebar__voiceInfo{
     flex: 1;
@@ -70,10 +77,14 @@
     color: #4be09d;
     font-weight: 600;
     font-size: medium;
+    font-family: "whitney";
+    font-weight: 500;
 }
 .sidebar__voiceInfo p{
     color: rgb(196, 196, 196);
     font-size: smaller;
+    font-family: 'whitney light';
+    font-weight: 500;
 }
 .sidebar__voiceIcons .MuiSvgIcon-root{
     padding: 7px;
@@ -92,11 +103,15 @@
     font-weight: 600;
     color: white;
     padding-left: 4px;
+    font-family: "whitney";
+    font-weight: 500;
 }
 .sidebar__profileInfo p{
     font-size: small;
     padding-left: 4px;
-    color: rgb(196, 196, 196);
+    color: rgb(185, 185, 185);
+    font-family: "whitney medium";
+    font-weight: 500;
 }
 .sidebar__profileIcons .MuiSvgIcon-root{
     padding: 7px;
