--- a/src/components/SidebarChannel.css
+++ b/src/components/SidebarChannel.css
@@ -1,16 +1,22 @@
 .sidebarChannel:hover h4{
-    color: white;
-    background-color: #40464b;
+    color: rgb(221, 221, 221);
+    background-color: rgba(59, 63, 66, 0.651);
 }
 .sidebarChannel h4{
     display: flex;
     padding-left: 15px;
     align-items: center;
     background-color: #2f3135;
-    color: gray;
+    color: rgb(146, 146, 146);
     cursor: pointer;
+    font-size: medium;
+    font-family: "whitney medium";
+    font-weight: 500;
 }
 .sidebarChannel__hash{
     font-size: 30px;
     padding: 8px;
+    font-family: "whitney light";
+    font-weight: 500;
+    color: rgb(124, 124, 124);
 }
