--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -16,13 +16,14 @@
     background-color: #42454d;
 }
 .chat__input form input{
-    padding: 15px;
+    padding: 10px;
     background: transparent;
     border: none;
     outline-width: 0;
     color: white;
     font-size: large;
     width: 100%;
+    font-family: "whitney light";
 }
 .chat__input .MuiSvgIcon-root{
     margin-left: 14px;
@@ -47,4 +48,5 @@
 }
 .chat__messages{
     flex: 1;
+    overflow-y: scroll;
 }
