--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -15,6 +15,9 @@
     border-bottom: 2px solid #26282c;
     cursor: pointer;
 }
+.sidebar__top:hover{
+    background-color: #3d40468a;
+}
 .sidebar__top h3{
     font-weight: 500;
     font-family: "whitney medium";
@@ -121,4 +124,3 @@
     background-color: rgba(66, 66, 66, 0.589);
     border-radius: 6px;
 }
-
