--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -50,3 +50,10 @@
     flex: 1;
     overflow-y: scroll;
 }
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #272727;
+    border-radius: 10px;
+}
