--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -124,3 +124,13 @@
     background-color: rgba(66, 66, 66, 0.589);
     border-radius: 6px;
 }
+.sidebar__channelsList{
+    overflow-y: scroll;
+}
+::-webkit-scrollbar{
+    width: 6px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #444444;
+    border-radius: 10px;
+}
